recursion.cons.min.Min.scala.error
Compilation error:
Min:12: error: type mismatch;
 found   : Int
 required: List[Int]
  return lambda(l.head,l.tail)
                  ^Min:12: error: type mismatch;
 found   : List[Int]
 required: Int
  return lambda(l.head,l.tail)
                         ^